--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,6 @@
     <meta http-equiv="refresh" content="0; URL='/src/HTML/Home.html'" />
 </head>
 <body>
-    <p>If you are not redirected, <a href="./src/HTML/Home.html">click here to go to Home page</a>.</p>
+    <p>If you are not redirect, <a href="./src/HTML/Home.html">click here to go to Home page</a>.</p>
 </body>
 </html>
