--- a/src/HTML/Contacts.html
+++ b/src/HTML/Contacts.html
@@ -65,7 +65,7 @@
 
       <div class="image-box" style="position: relative;">
         <!-- Image -->
-        <img style="height: 500px; width: 100%;" src="../Images/vecteezy_contact-us-or-customer-support-hotline-people-connect_17075644.jpg" alt="Placeholder Image">
+        <img style="height: 500px; width: 100%;" src="../Images/Vecteezy_contact-us-or-customer-support-hotline-people-connect_17075644.jpg" alt="Placeholder Image">
         <!-- Marquee for moving text -->
         <marquee direction="right" behavior="alternate" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: rgb(57, 16, 170); background-color: white;">
             <h3 style="color:rgb(47, 47, 194)">Feel Free To Contact Us</h3>
@@ -79,18 +79,16 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="contact-info">
-                    <img src="../Images/bx-envelope (1).svg" alt="Email Icon" style="height: 20px; width: 20px;">
+                    <img src="../Images/Bx-envelope (1).svg" alt="Email Icon" style="height: 20px; width: 20px;">
                     <h2>Mail us 24/7</h2>
                     <p><strong>Email:</strong> <a href="averybitSolution@gmail.com">averybitSolution@gmail.com</a></p>
                     <p><strong>Email:</strong> <a href="averybitconnect@gmail.com">averybitconnect@gmail.com</a></p>
                     <p><a href="#">READ MORE</a></p>
                 </div>
             </div>
-        
-          
             <div class="col-md-4 mb-4">
                 <div class="contact-info">
-                    <img src="../Images/bx-phone-call (1).svg" alt="Email Icon" style="height: 20px; width: 20px;">
+                    <img src="../Images/Bx-phone-call (1).svg" alt="Email Icon" style="height: 20px; width: 20px;">
                     <h2>Call us 24/7</h2>
                     <p><strong>Phone:</strong> (+55) 654 - 545 - 5418</p>
                     <p><strong>Mobile:</strong> (+91)1234567890</p>
@@ -99,7 +97,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="contact-info">
-                    <img src="../Images/bx-location-plus.svg" alt="Email Icon" style="height: 20px; width: 20px;">
+                    <img src="../Images/Bx-location-plus.svg" alt="Email Icon" style="height: 20px; width: 20px;">
                     <h2>Our Locations</h2>
                     <p><strong>Address:</strong> Above bakewell cafe</p>
                     <p>Indore Madhya Pradesh</p>
