--- a/src/HTML/Home.html
+++ b/src/HTML/Home.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
    
 
-<link rel="stylesheet" href="../CSS/navigate (1).css">
+<link rel="stylesheet" href="../CSS/Navigate (1).css">
 <!-- Bootstrap JS, Popper.js, and jQuery -->
 
 
@@ -37,12 +37,12 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="./Ear_Page.HTML">Ear</a></li>
-              <li><a class="dropdown-item" href="./noseservice.html">Nose</a></li>
+              <li><a class="dropdown-item" href="./Noseservice.html">Nose</a></li>
               <li><a class="dropdown-item" href="./Throat-service.html">Throat</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./doctors.html">Doctors</a>
+            <a class="nav-link" href="./Doctors.html">Doctors</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Contacts.html">Contact Us</a>
@@ -256,7 +256,7 @@
                                 vel facilisis.
                                 <ul>
                                   <li >
-                                    <img class="ourservices" src="../Images/check.png" alt="">
+                                    <img class="ourservices" src="../Images/Check.png" alt="">
                                     COVID-19 Assistance
                                     <span
                                       class="error-message"
@@ -265,7 +265,7 @@
                                     >
                                   </li>
                                   <li>
-                                    <img class="ourservices" src="../Images/check.png" alt="">
+                                    <img class="ourservices" src="../Images/Check.png" alt="">
                                     Comprehensive Inpatient
                                     <span
                                       class="error-message"
@@ -273,12 +273,12 @@
                                       >Error Message</span
                                     >
                                   </li>
-                                  <li> <img class="ourservices" src="../Images/check.png" alt="">Homeowners Insurance</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Medical And Surgical Services</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Insurance 101</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Specialised Support Service</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Resources Overview</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Instant Operation &amp; Appointment</li>
+                                  <li> <img class="ourservices" src="../Images/Check.png" alt="">Homeowners Insurance</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Medical And Surgical Services</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Insurance 101</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Specialised Support Service</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Resources Overview</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Instant Operation &amp; Appointment</li>
                                 </ul>
                               </div>
                             </div>
@@ -302,7 +302,7 @@
                                 <img
                                   decoding="async"
                                   class="wp-image-17484 size-full"
-                                  src="../Images/succes of treatment.jpg"
+                                  src="../Images/Succes of treatment.jpg"
                                   alt="tab-img-01"
                                 />
                               </div>
@@ -317,7 +317,7 @@
                                 vel facilisis.
                                 <ul>
                                   <li >
-                                    <img class="ourservices" src="../Images/check.png" alt="">
+                                    <img class="ourservices" src="../Images/Check.png" alt="">
                                     COVID-19 Assistance
                                     <span
                                       class="error-message"
@@ -326,7 +326,7 @@
                                     >
                                   </li>
                                   <li>
-                                    <img class="ourservices" src="../Images/check.png" alt="">
+                                    <img class="ourservices" src="../Images/Check.png" alt="">
                                     Comprehensive Inpatient
                                     <span
                                       class="error-message"
@@ -334,12 +334,12 @@
                                       >Error Message</span
                                     >
                                   </li>
-                                  <li> <img class="ourservices" src="../Images/check.png" alt="">Homeowners Insurance</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Medical And Surgical Services</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Insurance 101</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Specialised Support Service</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Resources Overview</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Instant Operation &amp; Appointment</li>
+                                  <li> <img class="ourservices" src="../Images/Check.png" alt="">Homeowners Insurance</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Medical And Surgical Services</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Insurance 101</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Specialised Support Service</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Resources Overview</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Instant Operation &amp; Appointment</li>
                                 </ul>
                               </div>
                             </div>
@@ -363,7 +363,7 @@
                                 <img
                                   decoding="async"
                                   class="wp-image-17484 size-full"
-                                  src="../Images/certifiedDoctor.jpg"
+                                  src="../Images/CertifiedDoctor.jpg"
                                   alt="tab-img-01"
                                 />
                               </div>
@@ -380,7 +380,7 @@
                                 vel facilisis.
                                 <ul>
                                   <li >
-                                    <img class="ourservices" src="../Images/check.png" alt="">
+                                    <img class="ourservices" src="../Images/Check.png" alt="">
                                     COVID-19 Assistance
                                     <span
                                       class="error-message"
@@ -389,7 +389,7 @@
                                     >
                                   </li>
                                   <li>
-                                    <img class="ourservices" src="../Images/check.png" alt="">
+                                    <img class="ourservices" src="../Images/Check.png" alt="">
                                     Comprehensive Inpatient
                                     <span
                                       class="error-message"
@@ -397,12 +397,12 @@
                                       >Error Message</span
                                     >
                                   </li>
-                                  <li> <img class="ourservices" src="../Images/check.png" alt="">Homeowners Insurance</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Medical And Surgical Services</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Insurance 101</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Specialised Support Service</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Resources Overview</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Instant Operation &amp; Appointment</li>
+                                  <li> <img class="ourservices" src="../Images/Check.png" alt="">Homeowners Insurance</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Medical And Surgical Services</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Insurance 101</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Specialised Support Service</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Resources Overview</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Instant Operation &amp; Appointment</li>
                                 </ul>
                               </div>
                             </div>
@@ -426,7 +426,7 @@
                                 <img
                                   decoding="async"
                                   class="wp-image-17484 size-full"
-                                  src="../Images/medical advice.jpg"
+                                  src="../Images/Medical advice.jpg"
                                   alt="tab-img-01"
                                 />
                               </div>
@@ -441,7 +441,7 @@
                                 vel facilisis.
                                 <ul>
                                   <li >
-                                    <img class="ourservices" src="../Images/check.png" alt="">
+                                    <img class="ourservices" src="../Images/Check.png" alt="">
                                     COVID-19 Assistance
                                     <span
                                       class="error-message"
@@ -450,7 +450,7 @@
                                     >
                                   </li>
                                   <li>
-                                    <img class="ourservices" src="../Images/check.png" alt="">
+                                    <img class="ourservices" src="../Images/Check.png" alt="">
                                     Comprehensive Inpatient
                                     <span
                                       class="error-message"
@@ -458,12 +458,12 @@
                                       >Error Message</span
                                     >
                                   </li>
-                                  <li> <img class="ourservices" src="../Images/check.png" alt="">Homeowners Insurance</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Medical And Surgical Services</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Insurance 101</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Specialised Support Service</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Resources Overview</li>
-                                  <li><img class="ourservices" src="../Images/check.png" alt="">Instant Operation &amp; Appointment</li>
+                                  <li> <img class="ourservices" src="../Images/Check.png" alt="">Homeowners Insurance</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Medical And Surgical Services</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Insurance 101</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Specialised Support Service</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Resources Overview</li>
+                                  <li><img class="ourservices" src="../Images/Check.png" alt="">Instant Operation &amp; Appointment</li>
                                 </ul>
                               </div>
                             </div>
@@ -1095,7 +1095,7 @@
         
         if (tabId === '2') {
           
-          $('.pbmit-tab-content-2 .pbmit-tab-img img').attr('src', '../Images/succes of treatment.jpg'
+          $('.pbmit-tab-content-2 .pbmit-tab-img img').attr('src', '../Images/Succes of treatment.jpg'
           );
         }
       });
