--- a/src/HTML/Throat-service.html
+++ b/src/HTML/Throat-service.html
@@ -29,7 +29,7 @@
             <a class="nav-link" aria-current="page" href="./Home.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./about.html" >About</a>
+            <a class="nav-link" href="./About.html" >About</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -37,19 +37,19 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="./Ear_Page.HTML">Ear</a></li>
-              <li><a class="dropdown-item" href="./noseservice.html">Nose</a></li>
+              <li><a class="dropdown-item" href="./Noseservice.html">Nose</a></li>
               <li><a class="dropdown-item" href="./Throat-service.html">Throat</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./doctors.html">Doctors</a>
+            <a class="nav-link" href="./Doctors.html">Doctors</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Contacts.html">Contact Us</a>
           </li>
         </ul>
         <ul class="btn-group my-auto">
-          <button class="btn btn-outline-success" type="submit"><a href="./feedback.html" style="list-style: none; text-decoration: none; color: white;" >Feedback Form</a></button>
+          <button class="btn btn-outline-success" type="submit"><a href="./Feedback.html" style="list-style: none; text-decoration: none; color: white;" >Feedback Form</a></button>
           <button class="btn btn-outline-success"  type="submit"><a style="list-style: none; text-decoration: none; color: white;" href="./AppointmentPage.html">Appointment Form</a></button>
         </ul>
       </div>
@@ -68,7 +68,7 @@
             <!-- <img src="../img/throat-service.webp" alt="" class="aboutus-cover-image"> -->
         </div>
         <div class="about-container">
-            <img src="../Images/throat-intro.jpg" alt="" class="about-img">
+            <img src="../Images/Throat-intro.jpg" alt="" class="about-img">
             <div class="abt-text-container my-auto">
                 <h6 class="abt-bg-color p-1 px-4 fw-bold">THROAT</h6>
                 <p class="abt-content-bg-col my-3">
