--- a/src/HTML/feedback.html
+++ b/src/HTML/feedback.html
@@ -10,8 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../CSS/Home.css">
 
-<link rel="stylesheet" href="../CSS/navigate (1).css">
-  <link rel="stylesheet" href="../css/feedback.css">
+<link rel="stylesheet" href="../CSS/Navigate (1).css">
+  <link rel="stylesheet" href="../css/Feedback.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -55,7 +55,7 @@
 
   <div class="image-box">
     <!-- Adding image here -->
-    <img src="../images/doctor-with-purple-stethoscope-hd-medical-i8eodw1rhfq6r353.jpg"
+    <img src="../Images/Doctor-with-purple-stethoscope-hd-medical-i8eodw1rhfq6r353.jpg"
         alt="Placeholder Image" style="height:400px;">
         <!-- Marquee for moving text -->
         <marquee direction="right" behavior="alternate" style="position: absolute; top: 60%; left: 50%; transform: translate(-50%, -50%); color: rgb(57, 16, 170); background-color: white;">
@@ -233,7 +233,7 @@
   
   </footer>
 <!-- Footer -->
-<script src="../js/feedback.script"></script>
+<script src="../Js/feedback.script"></script>
 
     
 </body>
